# fxa

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: deploy.yaml
install/: linux.sh  macos.sh
res/: default_config.yaml
src/: main.rs
src/api/: figma.rs  mod.rs
src/common/: error.rs  fileutils.rs  http_client.rs  mod.rs  renderer.rs  res_name.rs  suffixes.rs  suggestions.rs  webp.rs
src/common/fetcher/: fetcher.rs  mod.rs
src/common/fetching/: fetcher.rs  mod.rs  view.rs
src/common/gathering/: gathering.rs  mod.rs  view.rs
src/common/vdtool/: error.rs  mod.rs  pathparser.rs  res.rs  svg2vector.rs  svgcolor.rs  vdtool.rs  vdtree.rs
src/common/vdtool/ir/: ir.rs  mod.rs  path.rs  svg.rs
src/common/vdtool/render/: mod.rs  path.rs  svg.rs
src/features/: mod.rs
src/features/cleanup/: cleanup.rs  mod.rs  renderer.rs  view.rs
src/features/config/: config.rs  mod.rs  renderer.rs  view.rs
src/features/icons/: icons.rs  mod.rs  renderer.rs  view.rs
src/features/images/: images.rs  mod.rs  renderer.rs  view.rs
src/models/: config.rs  entrypoint.rs  figma.rs  mod.rs
