[package]
name = "fxn"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = { version = "3.1.18", features = ["derive", "env"] }
webp = "0.2.2"
image = "0.24.2"
crossterm = "0.23.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
thiserror = "1.0.31"
lazy_static = "1.4.0"
usvg = "0.22.0"
